--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
+lib_ldf_mode=deep
 lib_deps = 
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/me-no-dev/AsyncTCP
