--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:az-delivery-devkit-v4]
 build_flags =
 	-D UNIT_TEST=0
+	-D ERASE_WIFI=0
 build_type = release
 platform = espressif32
 board = az-delivery-devkit-v4
@@ -19,6 +20,7 @@ lib_ldf_mode=deep
 lib_deps = 
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	https://github.com/me-no-dev/AsyncTCP
+	https://github.com/vintlabs/fauxmoESP
     
 	a7md0/WakeOnLan @ ^1.1.6
 	;marian-craciunescu/ESP32Ping @ ^1.7
