--- a/platformio.ini
+++ b/platformio.ini
@@ -26,10 +26,10 @@ lib_deps =
 	;marian-craciunescu/ESP32Ping @ ^1.7
 	ayushsharma82/AsyncElegantOTA @ ^2.2.7
 	;ayushsharma82/WebSerial @ ^1.3.0
-	adafruit/Adafruit GFX Library @ ^1.11.1
-	adafruit/Adafruit ILI9341 @ ^1.5.10
-	adafruit/Adafruit BusIO @ ^1.11.6
-	adafruit/Adafruit Unified Sensor @ ^1.1.5
-	Wire
-	paulstoffregen/XPT2046_Touchscreen @ 0.0.0-alpha+sha.26b691b2c8
+	;adafruit/Adafruit GFX Library @ ^1.11.1
+	;adafruit/Adafruit ILI9341 @ ^1.5.10
+	;adafruit/Adafruit BusIO @ ^1.11.6
+	;adafruit/Adafruit Unified Sensor @ ^1.1.5
+	;Wire
+	;paulstoffregen/XPT2046_Touchscreen @ 0.0.0-alpha+sha.26b691b2c8
 	arduino-libraries/ArduinoHttpClient@^0.4.0
